<resources>
    <string name="app_name">Cybersecurity Education</string>
    <string name="login_forgot_password">Forgot Password</string>
    <string name="login_register">Create An Account</string>
    <string name="login_login">Login</string>
    <string name="login_password_hint">Enter your password</string>
    <string name="login_email_hint">Enter your email address</string>
    <string name="login_email_descr">EMAIL</string>
    <string name="login_password_descr">PASSWORD</string>
    <string name="login_first_name">Enter your first name </string>
    <string name="login_last_name">Enter your last name</string>
    <string name="register_user">Sign Up</string>
    <string name="back_btn">login</string>
    <string name="app_logo">app_logo</string>
    <string name="reset_password">reset password</string>
    <string name="app_title">CyberEdu</string>
    <string name="splashTitle1A">Cyber</string>
    <string name="splashTitle1B">Edu</string>
    <string name="splash2_descr">Cyber Edu makes cyber security education simple and effective!</string>
    <string name="splash2_title">BECOME INFORMED</string>
    <string name="splash3_title">Test Your Knowledge</string>
    <string name="sampleTextLong">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been</string>
    <string name="btn_next">Next</string>
    <string name="logout_btn">LogOut</string>
    <string name="demo_title">Welcome User</string>
    <string name="GOOGLE_API_KEY">AIzaSyB34VZrzfGjB-1rseWlVIeYNrNoeIcSXUU</string>
    <string name="intro_title">Welcome to the\nQuickBird Studios\nHealth Survey</string>
    <string name="intro_text">Get ready for a bunch of super random questions!</string>
    <string name="intro_start">Let\'s go!</string>
    <string name="security_title">Welcome to the\nSecurity Behavior\nSurvey</string>
    <string name="security_text">Please answer the following questions</string>
    <string name="security_start">Let\'s go!</string>
    <string name="about_you_question_title">Tell us about you</string>
    <string name="about_you_question_text">Tell us about yourself and why you want to improve your health.</string>
    <string name="how_old_title">How old are you?</string>
    <string name="how_old_text" />
    <string name="how_fat_question_title">Select your body type</string>
    <string name="how_fat_question_text" />
    <string name="how_fat_min">1</string>
    <string name="how_fat_max">5</string>
    <string name="allergies_question_title">Known allergies</string>
    <string name="allergies_question_text">Do you have any allergies that we should be aware of?</string>
    <string name="allergies_back_penicillin">Penicillin</string>
    <string name="allergies_latex">Latex</string>
    <string name="allergies_pet">Pet</string>
    <string name="allergies_pollen">Pollen</string>
    <string name="quit_or_continue_question_title">Done?</string>
    <string name="quit_or_continue_question_text">We are done, do you mind to tell us more about yourself?</string>
    <string name="finish_question_title">Done!</string>
    <string name="finish_question_text">Thanks for taking the survey, we will contact you soon!</string>
    <string name="finish_question_submit">Submit survey</string>
    <string name="how_old_hint">Please enter your age</string>
    <string name="value_picker_example_title">Pick a value</string>
    <string name="value_picker_example_text">Here you can pick any value you\'d like!</string>
    <string name="boolean_example_title">BooleanAnswerFormat example title</string>
    <string name="boolean_example_text">BooleanAnswerFormat example text</string>
    <string name="date_picker_title">Date Picker title</string>
    <string name="date_picker_text">Date Picker text</string>
    <string name="time_picker_title">Time Picker title</string>
    <string name="time_picker_text">Time Picker text</string>
    <string name="email_question_text">Email question text</string>
    <string name="email_question_title">Email question title</string>
    <string name="image_selector_question_title">Image choice</string>
    <string name="image_selector_question_text">Pick a color</string>
    <string name="date_time_question_title">DateTime Question</string>
    <string name="date_time_question_text">Choose a date and time</string>
    <string name="message">Are you sure you want to quit the survey?</string>
    <string name="title">SurveyKit</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="location_select_title">Select your home address</string>
    <string name="location_question_text">Tell us about yourself and your home address.</string>
    <string name="antivirus_question_title">Antivirus Usage</string>
    <string name="SecurityBehaviorQ1">Do you use antivirus software on your computer?</string>
    <string name="antivirus_answer_yes">Yes</string>
    <string name="antivirus_answer_no">No</string>
    <string name="antivirus_answer_not_sure">I am not sure</string>
    <string name="password_manager_question_title">Password Manager Usage</string>
    <string name="SecurityBehaviorQ2">Which of the following methods do you use as a password manager to manage your online accounts?</string>
    <string name="password_manager_answer_cloud_based">A cloud-based password manager from a third-party company (e.g., LastPass, Dashlane, 1Password, Bitwarden, etc.)</string>
    <string name="password_manager_answer_web_browser">A password manager that is built into the web browser (e.g., Google Chrome, Mozilla Firefox, Safari, Opera, Internet Explorer, and Microsoft Edge, etc.)</string>
    <string name="password_manager_answer_desktop_offline">A desktop-based offline password manager (e.g., KeePass, KeePassX, KeePassXC )</string>
    <string name="password_manager_answer_operating_system">A password manager that is built into the Operating System (e.g. Apply Keychain)</string>
    <string name="password_manager_answer_not_using">I am not currently using any password manager</string>
    <string name="password_manager_answer_not_sure">I am not sure</string>
    <string name="password_manager_answer_other">Other</string>
    <string name="secure_screen_lock_question_title">Locking Methods</string>
    <string name="SecurityBehaviorQ3">Which of the following methods do you use as a secure screen lock method on your smartphone?</string>
    <string name="secure_screen_lock_pin">PIN</string>
    <string name="secure_screen_lock_pattern">Pattern</string>
    <string name="secure_screen_lock_password">Password</string>
    <string name="secure_screen_lock_fingerprint">Fingerprint</string>
    <string name="secure_screen_lock_face_id">FaceID</string>
    <string name="secure_screen_lock_not_currently_using">I am not currently using any secure screen lock method</string>
    <string name="secure_screen_lock_not_sure">I am not sure</string>
    <string name="secure_screen_lock_other">Other</string>
    <string name="two_factor_authentication_question_title">Two-Factor Authentication</string>
    <string name="SecurityBehaviorQ4">Do you use two-factor authentication (e.g., 2-Step Verification) for at least one of your online accounts?</string>
    <string name="two_factor_authentication_yes">Yes</string>
    <string name="two_factor_authentication_no">No</string>
    <string name="two_factor_authentication_not_sure">I am not sure</string>
    <string name="security_sebis_title">Security Behavior Intentions Scale</string>
    <string name="security_sebis_text">Please respond to the following questions with the frequency at which you perform the described action</string>
    <string name="security_sebis_start">Let\'s go!</string>
    <string name="automatic_lock_question_text" />
    <string name="laptop_tablet_password_question_text" />
    <string name="manual_lock_question_text" />
    <string name="mobile_use_pin_question_text" />
    <string name="do_not_change_passwords_question_text" />
    <string name="different_passwords_question_text" />
    <string name="new_online_question_text" />
    <string name="special_characters_question_text" />
    <string name="link_verifying_question_text" />
    <string name="website_feel_question_text" />
    <string name="information_verifying_question_text" />
    <string name="mouseover_question_text" />
    <string name="security_continue_question_text" />
    <string name="update_prompt_question_text" />
    <string name="up_to_date_question_text" />
    <string name="anti_virus_verify_question_text" />
    <string name="automatic_lock_min">1</string>
    <string name="automatic_lock_max">5</string>
    <string name="laptop_tablet_password_min">1</string>
    <string name="laptop_tablet_password_max">5</string>
    <string name="manual_lock_min">1</string>
    <string name="manual_lock_max">5</string>
    <string name="mobile_use_pin_min">1</string>
    <string name="mobile_use_pin_max">5</string>
    <string name="do_not_change_passwords_min">1</string>
    <string name="do_not_change_passwords_max">5</string>
    <string name="different_passwords_min">1</string>
    <string name="different_passwords_max">5</string>
    <string name="new_online_min">1</string>
    <string name="new_online_max">5</string>
    <string name="special_characters_min">1</string>
    <string name="special_characters_max">5</string>
    <string name="link_verifying_min">1</string>
    <string name="link_verifying_max">5</string>
    <string name="website_feel_min">1</string>
    <string name="website_feel_max">5</string>
    <string name="information_verifying_min">1</string>
    <string name="information_verifying_max">5</string>
    <string name="mouseover_min">1</string>
    <string name="mouseover_max">5</string>
    <string name="security_continue_min">1</string>
    <string name="security_continue_max">5</string>
    <string name="update_prompt_min">1</string>
    <string name="update_prompt_max">5</string>
    <string name="up_to_date_min">1</string>
    <string name="up_to_date_max">5</string>
    <string name="anti_virus_verify_min">1</string>
    <string name="anti_virus_verify_max">5</string>
    <string name="SebisScaleQ1">I set my computer screen to automatically lock if I don’t use it for a prolonged period of time.</string>
    <string name="SebisScaleQ2">I use a password/passcode to unlock my laptop or tablet.</string>
    <string name="SebisScaleQ3">I manually lock my computer screen when I step away from it.</string>
    <string name="SebisScaleQ4">I use a PIN or passcode to unlock my mobile phone.</string>
    <string name="SebisScaleQ5">I do not change my passwords, unless I have to.</string>
    <string name="SebisScaleQ6">I use different passwords for different accounts that I have.</string>
    <string name="SebisScaleQ7">When I create a new online account, I try to use a password that goes beyond the site’s minimum requirements.</string>
    <string name="SebisScaleQ8">I do not include special characters in my password if it’s not required.</string>
    <string name="SebisScaleQ9">When someone sends me a link, I open it without first verifying where it goes.</string>
    <string name="SebisScaleQ10">I know what website I’m visiting based on its look and feel, rather than by looking at the URL bar.</string>
    <string name="SebisScaleQ11">I submit information to websites without first verifying that it will be sent securely (e.g., SSL, “https://”, a lock icon).</string>
    <string name="SebisScaleQ12">When browsing websites, I mouseover links to see where they go, before clicking them.</string>
    <string name="SebisScaleQ13">If I discover a security problem, I continue what I was doing because I assume someone else will fix it.</string>
    <string name="SebisScaleQ14">When I’m prompted about a software update, I install it right away.</string>
    <string name="SebisScaleQ15">I try to make sure that the programs I use are up-to-date.</string>
</resources>