<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SplashActivity1"
    android:id="@+id/splashScreen1"
    android:background="@color/AppBlue">

    <TextView
        android:id="@+id/splash_title_11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:fontFamily="@font/black_ops_one"
        android:text="@string/splashTitle1A"
        android:textColor="@color/white"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/iv_logo"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/splash_title_12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/black_ops_one"
        android:text="@string/splashTitle1B"
        android:textColor="@color/white"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/iv_logo"
        app:layout_constraintLeft_toRightOf="@id/splash_title_11"
        tools:layout_editor_absoluteX="236dp" />

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="288dp"
        android:layout_marginEnd="184dp"
        android:contentDescription="@string/app_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_vpn_lock_24_white" />

    <Button
        android:id="@+id/btn_skip1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/btn_next"
        android:textSize="17sp"
        android:textColor="@color/white"
        android:onClick="nextSplash1"
        android:background="@drawable/round_clear_white_border"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>


